--- a/index.html
+++ b/index.html
@@ -468,7 +468,7 @@
           <div class="row g-3">
             <!-- Anrede -->
             <div class="col-md-6">
-              <label class="form-label" for="anrede">Anrede</label>
+              <label class="form-label" for="anrede">Anrede*</label>
               <select class="form-select" id="anrede" name="anrede" required>
                 <option value="" disabled selected>Bitte wählen...</option>
                 <option value="Herr">Herr</option>
@@ -478,27 +478,27 @@
             </div>
             <!-- Vorname -->
             <div class="col-md-6">
-              <label class="form-label" for="vorname">Vorname</label>
+              <label class="form-label" for="vorname">Vorname*</label>
               <input class="form-control" id="vorname" name="vorname" required>
             </div>
             <!-- Nachname -->
             <div class="col-md-6">
-              <label class="form-label" for="nachname">Nachname</label>
+              <label class="form-label" for="nachname">Nachname*</label>
               <input class="form-control" id="nachname" name="nachname" required>
             </div>
             <!-- Telefon -->
             <div class="col-md-6">
-              <label class="form-label" for="phone">Telefon</label>
+              <label class="form-label" for="phone">Telefon*</label>
               <input class="form-control" id="phone" name="phone" required>
             </div>
             <!-- E-Mail -->
             <div class="col-12">
-              <label class="form-label" for="email">E-Mail</label>
+              <label class="form-label" for="email">E-Mail*</label>
               <input type="email" class="form-control" id="email" name="email" required>
             </div>
             <!-- Kursauswahl -->
             <div class="col-12">
-              <label class="form-label" for="kurs">Kursauswahl</label>
+              <label class="form-label" for="kurs">Kursauswahl*</label>
               <select class="form-select" id="kurs" name="kurs" required>
                 <option value="" disabled selected>Bitte wählen...</option>
                 <option value="Erwachsene BJJ">Erwachsene BJJ</option>
