--- a/datenschutz.html
+++ b/datenschutz.html
@@ -1,86 +1,103 @@
-
 <!DOCTYPE html>
 <html lang="de">
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>Datenschutzerklärung – Limani Fliesenleger</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Datenschutzerklärung – Circle of Life BJJ</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-<header>
-    <a class="navbar-brand d-flex align-items-center" href="index.html" title="Zurück zur Startseite">
-        <img src="assets/images/JiuJitsuLogo.svg" alt="Circle of Life Logo" style="max-height: 60px;">
-      </a>
-      
+<header class="container py-3">
+  <a class="d-flex align-items-center" href="index.html" title="Zurück zur Startseite">
+    <img src="assets/images/JiuJitsuLogo.svg" alt="Circle of Life Logo" style="max-height: 60px;"> &nbsp; Zurück zur Startseite
+  </a>
 </header>
 
 <main>
-    <div class="container legal-page">
-        <h1>Datenschutzerklärung</h1>
-        <section>
-            <h2>Auf einen Blick</h2>
-            <p><strong>Verantwortlich:</strong> Marvin Beck, Dürkheimer Str. 56, 67071 Ludwigshafen am Rhein</p>
-            <p><strong>Erhobene Daten:</strong> Kontaktdaten (Name, E-Mail, Telefonnummer), Projektanfrage, freiwillige Angaben</p>
-            <p><strong>Zweck:</strong> Angebotserstellung, Kundenkommunikation</p>
-            <p><strong>Speicherdauer:</strong> max. 12 Monate oder nach gesetzlichen Vorschriften</p>
-            <p><strong>Ihre Rechte:</strong> Auskunft, Berichtigung, Löschung, Einschränkung</p>
-        </section>
+  <div class="container legal-page my-4">
+    <h1 class="mb-4">Datenschutzerklärung</h1>
 
-        <section>
-            <h2>Allgemeine Hinweise</h2>
-            <p>Der Schutz Ihrer persönlichen Daten ist uns wichtig. Wir behandeln Ihre personenbezogenen Daten vertraulich und entsprechend der gesetzlichen Datenschutzvorschriften.</p>
-        </section>
+    <section class="mb-4">
+      <h2>Auf einen Blick</h2>
+      <p><strong>Verantwortlich:</strong> Circle of Life BJJ – Marvin Beck, Dürkheimer Str. 56, 67071 Ludwigshafen am Rhein</p>
+      <p><strong>Erhobene Daten:</strong> Kontaktdaten (Anrede, Name, E-Mail, Telefonnummer), Kursauswahl, Nachricht (freiwillige Angaben)</p>
+      <p><strong>Zwecke:</strong> Beantwortung von Anfragen (insbesondere Probetraining), Terminabstimmung, Kundenkommunikation</p>
+      <p><strong>Rechtsgrundlagen:</strong> Art. 6 Abs. 1 lit. b DSGVO (vorvertragliche Kommunikation), Art. 6 Abs. 1 lit. f DSGVO (berechtigtes Interesse an effizienter Kommunikation), bei freiwilligen Angaben Art. 6 Abs. 1 lit. a DSGVO (Einwilligung)</p>
+      <p><strong>Speicherdauer:</strong> im E-Mail-Postfach bis Abschluss der Anfrage, i. d. R. max. 12 Monate; Server-Logs kurzfristig (anbieterabhängig)</p>
+      <p><strong>Ihre Rechte:</strong> Auskunft, Berichtigung, Löschung, Einschränkung, Widerspruch, Datenübertragbarkeit, Widerruf erteilter Einwilligungen</p>
+    </section>
 
-        <section>
-            <h2>Verantwortliche Stelle</h2>
-            <p>Limani Fliesenleger<br>
-            Inhaber: Milaim Limani<br>
-            E7 13, 68161 Mannheim<br>
-            E-Mail: milaim.limani@gmx.de<br>
-            Telefon: 0173 3293668</p>
-        </section>
+    <section class="mb-4">
+      <h2>Allgemeine Hinweise</h2>
+      <p>Wir behandeln Ihre personenbezogenen Daten vertraulich und entsprechend der gesetzlichen Datenschutzvorschriften der DSGVO sowie dieser Datenschutzerklärung.</p>
+    </section>
 
-        <section>
-            <h2>Erhebung und Speicherung personenbezogener Daten</h2>
-            <p>Wir erfassen personenbezogene Daten ausschließlich über das Kontaktformular. Diese beinhalten: Name, E-Mail-Adresse, Telefonnummer, Projektbeschreibung und optionale Angaben. Eine Weitergabe an Dritte erfolgt nicht ohne Ihre ausdrückliche Zustimmung.</p>
-        </section>
+    <section class="mb-4">
+      <h2>Verantwortliche Stelle</h2>
+      <p>
+        Circle of Life BJJ – Marvin Beck<br>
+        Dürkheimer Str. 56, 67071 Ludwigshafen am Rhein<br>
+        E-Mail: <a href="mailto:mail.circleoflife@gmx.de">mail.circleoflife@gmx.de</a>
+      </p>
+    </section>
 
-        <section>
-            <h2>Zweck der Datenverarbeitung</h2>
-            <p>Ihre Daten werden ausschließlich zur Bearbeitung Ihrer Anfrage verwendet, insbesondere zur Erstellung von Angeboten und zur Kontaktaufnahme.</p>
-        </section>
+    <section class="mb-4">
+      <h2>Erhebung und Verarbeitung personenbezogener Daten</h2>
+      <p>Wir erheben personenbezogene Daten ausschließlich über das Kontakt-/Probetraining-Formular. Erfasst werden je nach Eingabe insbesondere Anrede, Vorname, Nachname, E-Mail-Adresse, Telefonnummer, Kursauswahl sowie Ihre Nachricht (freiwillige Angaben).</p>
+      <p><strong>Wichtig:</strong> Ihre Formulardaten werden <strong>nicht in einer Datenbank gespeichert</strong>, sondern ausschließlich <strong>per E-Mail</strong> an uns übermittelt und dort bearbeitet.</p>
+    </section>
 
-        <section>
-            <h2>Speicherdauer</h2>
-            <p>Wir speichern Ihre Daten maximal 12 Monate, sofern keine gesetzlichen Aufbewahrungspflichten bestehen.</p>
-        </section>
+    <section class="mb-4">
+      <h2>Zwecke und Rechtsgrundlagen</h2>
+      <p>Wir verarbeiten Ihre Daten zur Beantwortung von Anfragen, zur Terminabstimmung (z. B. Probetraining) und zur Kundenkommunikation. Rechtsgrundlagen sind Art. 6 Abs. 1 lit. b DSGVO (vorvertragliche Kommunikation) sowie Art. 6 Abs. 1 lit. f DSGVO (berechtigtes Interesse an effizienter Kommunikation). Soweit Sie uns freiwillig zusätzliche Angaben übermitteln, erfolgt die Verarbeitung insoweit auf Grundlage Ihrer Einwilligung (Art. 6 Abs. 1 lit. a DSGVO), die Sie jederzeit mit Wirkung für die Zukunft widerrufen können.</p>
+    </section>
 
-        <section>
-            <h2>Ihre Rechte</h2>
-            <p>Sie haben jederzeit das Recht auf:</p>
-            <ul>
-                <li>Auskunft über Ihre gespeicherten Daten</li>
-                <li>Berichtigung unrichtiger Daten</li>
-                <li>Löschung Ihrer Daten (Recht auf Vergessenwerden)</li>
-                <li>Einschränkung der Verarbeitung</li>
-                <li>Widerspruch gegen die Datenverarbeitung</li>
-            </ul>
-            <p>Kontaktieren Sie uns dazu bitte unter <a href="mailto:milaim.limani@gmx.de">milaim.limani@gmx.de</a>.</p>
-        </section>
+    <section class="mb-4">
+      <h2>Empfänger und Hosting</h2>
+      <ul>
+        <li><strong>E-Mail-Dienst</strong>: GMX (E-Mail-Postfach) als Empfänger i. S. v. Art. 4 Nr. 9 DSGVO für den Versand/Empfang Ihrer Nachricht.</li>
+        <li><strong>Hosting/Server</strong>: Unsere Formular-Schnittstelle wird bei Render betrieben. Dabei fallen aus technischen Gründen Server-Logdaten (z. B. IP-Adresse, Datum/Uhrzeit, User-Agent) an, die zur Sicherstellung des Betriebs und der IT-Sicherheit verarbeitet werden.</li>
+      </ul>
+    </section>
 
-        <section>
-            <h2>Cookies & Tracking (zukünftig)</h2>
-            <p>Aktuell setzen wir keine Cookies oder Analysetools ein. Sobald sich dies ändert, werden wir Ihre Einwilligung einholen und unsere Datenschutzerklärung entsprechend anpassen.</p>
-        </section>
+    <section class="mb-4">
+      <h2>Drittlandübermittlung</h2>
+      <p>Sofern genannte Dienstleister Dienste in Drittländern (z. B. USA) erbringen, erfolgt die Übermittlung auf Basis der jeweils einschlägigen Garantien nach Art. 44 ff. DSGVO (z. B. EU-Standardvertragsklauseln) bzw. verfügbarer Angemessenheitsbeschlüsse. Weitere Informationen stellen die Anbieter in ihren Datenschutzhinweisen bereit.</p>
+    </section>
 
-        <section>
-            <h2>Änderungen dieser Erklärung</h2>
-            <p>Diese Datenschutzerklärung wird regelmäßig aktualisiert. Letztes Update: Juni 2025.</p>
-        </section>
-</div>
+    <section class="mb-4">
+      <h2>Speicherdauer</h2>
+      <p>E-Mails werden bis zur abschließenden Bearbeitung Ihrer Anfrage und – soweit erforderlich – gemäß gesetzlichen Aufbewahrungspflichten gespeichert; im Regelfall maximal <strong>12 Monate</strong>. Server-Logdaten werden ausschließlich zu Betriebs- und Sicherheitszwecken kurzfristig gespeichert (anbieterabhängig, typischerweise 7–30 Tage) und danach gelöscht oder anonymisiert.</p>
+    </section>
+
+    <section class="mb-4">
+      <h2>Pflicht zur Bereitstellung</h2>
+      <p>Die Angabe grundlegender Kontakt- und Anfragedaten ist erforderlich, um Ihre Anfrage zu bearbeiten. Ohne diese Angaben ist eine Bearbeitung nicht möglich.</p>
+    </section>
+
+    <section class="mb-4">
+      <h2>Keine automatisierte Entscheidungsfindung</h2>
+      <p>Es findet keine automatisierte Entscheidungsfindung einschließlich Profiling statt.</p>
+    </section>
+
+    <section class="mb-4">
+      <h2>Ihre Rechte</h2>
+      <p>Sie haben das Recht auf Auskunft (Art. 15), Berichtigung (Art. 16), Löschung (Art. 17), Einschränkung der Verarbeitung (Art. 18), Datenübertragbarkeit (Art. 20) sowie Widerspruch gegen Verarbeitungen auf Grundlage von Art. 6 Abs. 1 lit. f DSGVO (Art. 21). Von Ihnen erteilte Einwilligungen (Art. 6 Abs. 1 lit. a) können Sie jederzeit mit Wirkung für die Zukunft widerrufen.</p>
+      <p>Zur Wahrnehmung Ihrer Rechte kontaktieren Sie uns bitte unter <a href="mailto:mail.circleoflife@gmx.de">mail.circleoflife@gmx.de</a>. Zudem besteht ein Beschwerderecht bei einer Datenschutz-Aufsichtsbehörde.</p>
+    </section>
+
+    <section class="mb-4">
+      <h2>Cookies &amp; Tracking</h2>
+      <p>Aktuell setzen wir keine Analyse- oder Marketing-Cookies ein. Sollte sich dies ändern, holen wir vorab Ihre Einwilligung ein und passen diese Hinweise an.</p>
+    </section>
+
+    <section class="mb-5">
+      <h2>Änderungen dieser Erklärung</h2>
+      <p>Diese Datenschutzerklärung wird bei Bedarf aktualisiert. <strong>Stand:</strong> September 2025.</p>
+    </section>
+  </div>
 </main>
 </body>
 </html>
