--- a/impressum.html
+++ b/impressum.html
@@ -10,11 +10,11 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-<header>
-  <a class="navbar-brand d-flex align-items-center" href="index.html" title="Zurück zur Startseite">
-    <img src="assets/images/JiuJitsuLogo.svg" alt="Circle of Life Logo" style="max-height: 200px;">
-  </a>
-</header>
+  <header class="container py-3">
+    <a class="d-flex align-items-center" href="index.html" title="Zurück zur Startseite">
+      <img src="assets/images/JiuJitsuLogo.svg" alt="Circle of Life Logo" style="max-height: 60px;"> &nbsp; Zurück zur Startseite
+    </a>
+  </header>
 
 <main>
   <div class="container legal-page">
