--- a/index.html
+++ b/index.html
@@ -3,16 +3,31 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Circle of Life Jiu-Jitsu – Brazilian Jiu-Jitsu & Grappling</title>
-  <meta name="description" content="Circle of Life Jiu-Jitsu: BJJ (Gi & No-Gi) in Mannheim. Einsteiger willkommen. Kostenlose Probetraining!" />
+  <title>Brazilian Jiu-Jitsu und No-Gi Grappling Ludwigshafen | Circle of Life BJJ</title>
+  <meta name="description" content="Starte jetzt mit Brazilian Jiu-Jitsu in Ludwigshafen – Circle of Life BJJ. Gi & No-Gi, Training für Anfänger & Fortgeschrittene. Sichere dir dein kostenloses Probetraining!">
+
+  <!-- Canonical (SEO) -->
   <link rel="canonical" href="https://circleoflife-bjj.de/">
 
-  <!-- Open Graph / Twitter -->
-  <meta property="og:title" content="Circle of Life Jiu-Jitsu – BJJ & Grappling">
-  <meta property="og:description" content="Kostenlose Probetraining. Strukturierter Kursplan. Coaches mit Erfahrung. Mannheim.">
+  <!-- Open Graph (Facebook, Instagram, WhatsApp, LinkedIn) -->
   <meta property="og:type" content="website">
-  <meta property="og:image" content="/assets/og-cover.jpg">
+  <meta property="og:site_name" content="Circle of Life Jiu-Jitsu">
+  <meta property="og:locale" content="de_DE">
+  <meta property="og:url" content="https://circleoflife-bjj.de/">
+  <meta property="og:title" content="Brazilian Jiu-Jitsu in Mannheim & Ludwigshafen | Circle of Life BJJ">
+  <meta property="og:description" content="Starte jetzt mit Brazilian Jiu-Jitsu bei Circle of Life – kostenlose Probestunde, strukturierter Kursplan & erfahrene Coaches. Mannheim & Ludwigshafen.">
+  <meta property="og:image" content="https://circleoflife-bjj.de/assets/social/og-cover.jpg">
+  <meta property="og:image:width" content="1200">
+  <meta property="og:image:height" content="630">
+  <meta property="og:image:alt" content="Circle of Life BJJ – Training auf der Matte in Mannheim">
+
+  <!-- Twitter (X) -->
   <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Brazilian Jiu-Jitsu in Mannheim & Ludwigshafen | Circle of Life BJJ">
+  <meta name="twitter:description" content="Kostenlose Probestunde, strukturierter Kursplan & erfahrene Coaches. Jetzt einsteigen und Circle of Life BJJ kennenlernen.">
+  <meta name="twitter:image" content="https://circleoflife-bjj.de/assets/social/og-cover.jpg">
+  <meta name="twitter:image:alt" content="Circle of Life BJJ – Training auf der Matte in Mannheim">
+
 
   <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -33,28 +48,79 @@
   <link rel="stylesheet" href="https://unpkg.com/aos@2.3.4/dist/aos.css"/>
 
   <!-- Structured Data -->
-  <script type="application/ld+json">
+<!-- Structured Data: SportsActivityLocation -->
+<script type="application/ld+json">
   {
-    "@context":"https://schema.org",
-    "@type":"SportsActivityLocation",
-    "name":"Circle of Life Jiu-Jitsu",
-    "sport":["Brazilian Jiu-Jitsu","Grappling"],
-    "address":{"@type":"PostalAddress","addressLocality":"Mannheim","addressCountry":"DE"},
-    "telephone":"+49 0000 000000",
-    "openingHours":["Mo 18:00-21:00","Mi 18:00-21:00","Fr 18:00-21:00","So 18:00-21:00"],
-    "image":["https://images.unsplash.com/photo-1598970434795-0c54fe7c0642?w=1200&auto=format&fit=crop"],
-    "url":"https://circleoflife-bjj.de/"
+    "@context": "https://schema.org",
+    "@type": "SportsActivityLocation",
+    "name": "Circle of Life Jiu-Jitsu",
+    "sport": ["Brazilian Jiu-Jitsu", "Grappling"],
+    "url": "https://circleoflife-bjj.de/",
+    "telephone": "+49 176 61990534",
+    "email": "mail.circleoflife@gmx.de",
+    "image": "https://circleoflife-bjj.de/assets/social/og-cover.jpg",
+    "priceRange": "€€",
+    "address": {
+      "@type": "PostalAddress",
+      "streetAddress": "Am Herrschaftsweiher 17",
+      "postalCode": "67071",
+      "addressLocality": "Ludwigshafen am Rhein",
+      "addressRegion": "Rheinland-Pfalz",
+      "addressCountry": "DE"
+    },
+    "openingHoursSpecification": [
+      { "@type": "OpeningHoursSpecification", "dayOfWeek": "Monday",    "opens": "17:00", "closes": "21:00" },
+      { "@type": "OpeningHoursSpecification", "dayOfWeek": "Wednesday", "opens": "17:00", "closes": "21:00" },
+      { "@type": "OpeningHoursSpecification", "dayOfWeek": "Friday",    "opens": "18:00", "closes": "21:00" },
+      { "@type": "OpeningHoursSpecification", "dayOfWeek": "Sunday",    "opens": "18:00", "closes": "21:00" }
+    ],
+    "sameAs": [
+      "https://www.instagram.com/circle_of_life_jiujitsu?igsh=MXVyMDNtdHRmNXoxZw=="
+    ]
   }
   </script>
 
-  <!-- FAQ Schema -->
   <script type="application/ld+json">
-  {"@context":"https://schema.org","@type":"FAQPage","mainEntity":[
-    {"@type":"Question","name":"Brauche ich Vorerfahrung?","acceptedAnswer":{"@type":"Answer","text":"Nein, Einsteiger sind willkommen. Unsere Fundamentals führen dich sicher ein."}},
-    {"@type":"Question","name":"Gibt es eine Probetraining?","acceptedAnswer":{"@type":"Answer","text":"Ja, kostenlos und unverbindlich. Nutze das Formular auf der Seite."}},
-    {"@type":"Question","name":"Gi oder No-Gi?","acceptedAnswer":{"@type":"Answer","text":"Beides möglich. Für den Start reicht Sportkleidung; Gi kann später besorgt werden."}}
-  ]}
-  </script>
+    {
+      "@context": "https://schema.org",
+      "@type": "FAQPage",
+      "mainEntity": [
+        {
+          "@type": "Question",
+          "name": "Brauche ich Vorerfahrung im Kampfsport?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "Nein, Einsteiger sind ausdrücklich willkommen. Wir starten mit Fundamentals und führen dich Schritt für Schritt ins Training ein."
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "Was soll ich zum Probetraining mitbringen?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "Bequeme Sportkleidung und Flip-Flops genügen. Falls du schon ein Gi besitzt, kannst du ihn gerne mitbringen. Alles Weitere erklären wir vor Ort."
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "Ist das Probetraining wirklich kostenlos?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "Ja, das Probetraining ist vollkommen kostenlos und unverbindlich. So kannst du uns und den Sport ganz entspannt kennenlernen."
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "Kann ich auch als Frau oder Kind teilnehmen?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "Absolut! Wir haben spezielle Kindertrainings sowie viele Frauen im Training. Alle sind willkommen – unabhängig von Alter oder Geschlecht."
+          }
+        }
+      ]
+    }
+    </script>
+    
 </head>
 <body>
 
@@ -79,6 +145,7 @@
           <li class="nav-item"><a class="nav-link" href="#kursplan">Kursplan</a></li>
           <li class="nav-item"><a class="nav-link" href="#preise">Preise</a></li>
           <li class="nav-item"><a class="nav-link" href="#trainer">Trainer</a></li>
+          <li class="nav-item"><a class="nav-link" href="#faq">Fragen</a></li>
           <li class="nav-item">
             <a class="btn btn-sm btn-brand ms-lg-2" href="#probetraining">Probetraining</a>
           </li>
@@ -137,11 +204,12 @@
       <!-- Gi -->
       <article class="course-card" data-aos="zoom-in">
         <div class="course-header">
-          <img src="/assets/icons/BJJ_BlackBelt.svg" alt="Gi Icon" class="course-icon">
+          <img src="/assets/icons/BJJ_BlackBelt.svg" alt="Gi black belt icon" class="course-icon">
           <h3>Gi – klassisches BJJ</h3>
         </div>
         <p>
-          Training im traditionellen Kimono. Techniken, Griffe und Strategien – von Basics bis Gürtelprüfung.
+          Klassisches Brazilian Jiu-Jitsu im Gi, ein moderner Kampfsport im Kimono. Du lernst Würfe, Griffe, Guard-Game und Strategien für Kontrolle & Submissions. 
+          Ideal für Einsteiger und Fortgeschrittene in Ludwigshafen und Umgebung – Techniktraining mit Spaß und Struktur.
         </p>
       </article>
 
@@ -152,24 +220,30 @@
           <h3>No-Gi – modernes Grappling</h3>
         </div>
         <p>
-          Dynamisches Grappling ohne Kimono. Schneller, athletischer Stil mit Fokus auf Submissions & Control.
+          Dynamisches Brazilian Jiu-Jitsu ohne Kimono – auch bekannt als <strong>No-Gi Grappling</strong>. 
+          Der Fokus liegt auf Schnelligkeit, Athletik und modernen Submissions wie Leglocks, Heelhooks und Guillotines. 
+          Perfekt für alle, die in Ludwigshafen ein intensives und wettkampforientiertes Training suchen – geeignet für Anfänger und Fortgeschrittene.
         </p>
       </article>
 
       <!-- Kondition / Kids -->
       <article class="course-card"data-aos="zoom-in" data-aos-delay="300">
         <div class="course-header">
-          <img src="/assets/icons/strength_icon.png" alt="Kraft Icon" class="course-icon">
+          <img src="/assets/icons/strength_icon.png" alt="Fitness und Kraft Icon" class="course-icon">
           <h3>Kondition & Muskelaufbau</h3>
         </div>
         <p>
-          Ergänzendes Kraft- und Ausdauertraining für Performance, Körperkontrolle und Verletzungsprävention.
+          Ergänzendes Training für Kraft, Ausdauer und Körperkontrolle. 
+          Durch gezielte Übungen stärkst du Muskulatur und Gelenke, verbesserst deine Fitness und beugst Verletzungen vor. 
+          Ideal für BJJ-Athleten, die ihre Leistung auf der Matte steigern und ihre Fitness ganzheitlich verbessern möchten.
         </p>
       </article>
 
     </div>
-
-    <p class="footnote">*Alle Kurse sind auch für Kinder verfügbar</p>
+    <p class="footnote bg-warning text-dark px-3 py-2 rounded-3 mt-3">
+      👶 Alle Kurse sind selbstverständlich auch für <strong>Kinder</strong> verfügbar!
+      <br> Hier lernen Kinder spielerisch Kampfsport, Selbstvertrauen und Selbstverteidigung.
+    </p>
   </div>
 </section>
 
@@ -178,7 +252,7 @@
 <section id="einstieg" class="py-5 section-divider" style="position:relative;">
   <div class="container">
     <header class="section-head" data-aos="fade-up">
-      <h2 class="section-title">Join the Circle of Life</h2>
+      <h2 class="section-title">Be a part of the Circle</h2>
       <p class="section-subtitle" data-aos="fade-up">
         Stärker werden – technisch, mental und als Team. Das ist unser Versprechen.
       </p>
@@ -194,8 +268,10 @@
             <span class="step-number">1</span>
             <h5 class="mb-0 ms-2 card-link">Probetraining anfragen</h5>
           </div>
-          <p class="text-secondary mb-0">Erster Kontakt: Formular ausfüllen, per Telefon oder eine Whatsapp-Nachricht – wir melden uns innerhalb von 24h.</p>
-          
+          <p class="text-secondary mb-0">
+            Erster Kontakt leicht gemacht: Formular ausfüllen, per Telefon anrufen oder eine WhatsApp-Nachricht schicken. 
+            Wir melden uns innerhalb von 24 Stunden und bestätigen deinen Termin für das kostenlose Probetraining im Brazilian Jiu-Jitsu in Ludwigshafen.
+          </p>
         </article>
       </a>
       </div>
@@ -209,8 +285,10 @@
             <span class="step-number">2</span>
             <h5 class="mb-0 ms-2">Probetraining</h5>
           </div>
-          <p class="text-secondary mb-0">Vorbeikommen und Spaß haben! 
-            <br>Lerne in einem ersten Training das Team, unser Angebot und unsere Trainer kennen.
+          <p class="text-secondary mb-0">
+            Komm einfach vorbei und erlebe dein erstes Training! 
+            Lerne unser Team, die Trainer und das Training im Gi und No-Gi kennen. 
+            Du bekommst einen realistischen Eindruck von Brazilian Jiu-Jitsu, einem effektiven Kampfsport und Selbstverteidigungssystem – kostenlos und unverbindlich.
           </p>
         </article>
       </div>
@@ -222,8 +300,11 @@
             <span class="step-number">3</span>
             <h5 class="mb-0 ms-2">Dranbleiben</h5>
           </div>
-          <p class="text-secondary mb-0">Nach dem Probetraining hast du die Chance teil des Teams zu werden und dich stätig zu verbessern.
-          </p>        
+          <p class="text-secondary mb-0">
+            Nach dem Probetraining entscheidest du, ob du Teil unserer Community wirst. 
+            Mit regelmäßigem Training entwickelst du Technik, Fitness und Selbstvertrauen – egal ob Anfänger oder Fortgeschrittener. 
+            So bleibst du langfristig am Ball.
+          </p>      
         </article>
       </div>
     </div>
@@ -403,7 +484,8 @@
           <img class="w-100 rounded-3 mb-3" src="/assets/images/Schwarzer_GI.jpeg" alt="Headcoach Marvin Beck">
           <h5 class="mb-1">Headcoach Marvin Beck</h5>
           <p class="text-secondary small mb-2">Black Belt</p>
-          <p class="mb-0">IBJJF-Erfahrung. "Position before Submission - hier werden ganze Systeme beigebracht. 
+          <p class="mb-0">Unser Headcoach Marvin Beck bringt jahrelange Erfahrung aus Brazilian Jiu-Jitsu, No-Gi Wettkämpfen und Martial Arts mit. 
+            <br>"Position before Submission - hier werden ganze Systeme beigebracht. 
             Guard-Game, Guard-Passing, Top-Game und Leg-Locks"</p>
         </article>
       </div>
@@ -573,6 +655,77 @@
     </div> <!-- /row -->
   </div> <!-- /container -->
 </section>
+
+<!-- FAQ Section -->
+<section id="faq" class="py-5 section-divider" style="position:relative;">
+  <div class="container">
+    <header class="section-head" data-aos="fade-up">
+      <h2 class="section-title">Häufige Fragen (FAQ)</h2>
+      <p class="section-subtitle" data-aos="fade-up" data-aos-delay="150">
+        Noch unsicher? Hier findest du Antworten auf die wichtigsten Fragen.
+      </p>
+    </header>
+
+    <div class="accordion" id="faqAccordion">
+      <!-- Frage 1 -->
+      <div class="accordion-item">
+        <h2 class="accordion-header" id="q1">
+          <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#a1" aria-expanded="true" aria-controls="a1">
+            Brauche ich Vorerfahrung im Kampfsport?
+          </button>
+        </h2>
+        <div id="a1" class="accordion-collapse collapse show" data-bs-parent="#faqAccordion">
+          <div class="accordion-body">
+            Nein, Einsteiger sind ausdrücklich willkommen. Wir starten mit <em>Fundamentals</em> und führen dich Schritt für Schritt ins Training ein.
+          </div>
+        </div>
+      </div>
+
+      <!-- Frage 2 -->
+      <div class="accordion-item">
+        <h2 class="accordion-header" id="q2">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#a2" aria-expanded="false" aria-controls="a2">
+            Was soll ich zum Probetraining mitbringen?
+          </button>
+        </h2>
+        <div id="a2" class="accordion-collapse collapse" data-bs-parent="#faqAccordion">
+          <div class="accordion-body">
+            Bequeme Sportkleidung und Flip-Flops genügen. Falls du schon ein Gi besitzt, kannst du ihn gerne mitbringen. Alles Weitere erklären wir vor Ort.
+          </div>
+        </div>
+      </div>
+
+      <!-- Frage 3 -->
+      <div class="accordion-item">
+        <h2 class="accordion-header" id="q3">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#a3" aria-expanded="false" aria-controls="a3">
+            Ist das Probetraining wirklich kostenlos?
+          </button>
+        </h2>
+        <div id="a3" class="accordion-collapse collapse" data-bs-parent="#faqAccordion">
+          <div class="accordion-body">
+            Ja, das Probetraining ist vollkommen kostenlos und unverbindlich. So kannst du uns und den Sport ganz entspannt kennenlernen.
+          </div>
+        </div>
+      </div>
+
+      <!-- Frage 4 -->
+      <div class="accordion-item">
+        <h2 class="accordion-header" id="q4">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#a4" aria-expanded="false" aria-controls="a4">
+            Kann ich auch als Frau oder Kind teilnehmen?
+          </button>
+        </h2>
+        <div id="a4" class="accordion-collapse collapse" data-bs-parent="#faqAccordion">
+          <div class="accordion-body">
+            Absolut! Wir haben spezielle Kindertrainings sowie viele Frauen im Training. Alle sind willkommen – unabhängig von Alter oder Geschlecht.
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
 
 
   <!-- FOOTER -->
