--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <meta property="og:url" content="https://circleoflife-bjj.de/">
   <meta property="og:title" content="Brazilian Jiu-Jitsu in Mannheim & Ludwigshafen | Circle of Life BJJ">
   <meta property="og:description" content="Starte jetzt mit Brazilian Jiu-Jitsu bei Circle of Life – kostenlose Probestunde, strukturierter Kursplan & erfahrene Coaches. Mannheim & Ludwigshafen.">
-  <meta property="og:image" content="https://circleoflife-bjj.de/assets/social/og-cover.jpg">
+  <meta property="og:image" content="https://circleoflife-bjj.de/assets/social/og-cover.jpeg">
   <meta property="og:image:width" content="1200">
   <meta property="og:image:height" content="630">
   <meta property="og:image:alt" content="Circle of Life BJJ – Training auf der Matte in Mannheim">
@@ -25,7 +25,7 @@
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Brazilian Jiu-Jitsu in Mannheim & Ludwigshafen | Circle of Life BJJ">
   <meta name="twitter:description" content="Kostenlose Probestunde, strukturierter Kursplan & erfahrene Coaches. Jetzt einsteigen und Circle of Life BJJ kennenlernen.">
-  <meta name="twitter:image" content="https://circleoflife-bjj.de/assets/social/og-cover.jpg">
+  <meta name="twitter:image" content="https://circleoflife-bjj.de/assets/social/og-cover.jpeg">
   <meta name="twitter:image:alt" content="Circle of Life BJJ – Training auf der Matte in Mannheim">
 
 
@@ -41,44 +41,55 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
 
   <!-- Favicon & CSS -->
-  <link rel="icon" type="image/svg+xml" href="/assets/images/logo.svg">
+  <link rel="icon" type="image/svg+xml" href="/assets/images/JiuJitsuLogo.svg">
   <link href="/css/style.css" rel="stylesheet">
 
   <!-- AOS CSS for Stripe-like scroll animations -->
   <link rel="stylesheet" href="https://unpkg.com/aos@2.3.4/dist/aos.css"/>
 
   <!-- Structured Data -->
-<!-- Structured Data: SportsActivityLocation -->
-<script type="application/ld+json">
-  {
-    "@context": "https://schema.org",
-    "@type": "SportsActivityLocation",
-    "name": "Circle of Life Jiu-Jitsu",
-    "sport": ["Brazilian Jiu-Jitsu", "Grappling"],
-    "url": "https://circleoflife-bjj.de/",
-    "telephone": "+49 176 61990534",
-    "email": "mail.circleoflife@gmx.de",
-    "image": "https://circleoflife-bjj.de/assets/social/og-cover.jpg",
-    "priceRange": "€€",
-    "address": {
-      "@type": "PostalAddress",
-      "streetAddress": "Am Herrschaftsweiher 17",
-      "postalCode": "67071",
-      "addressLocality": "Ludwigshafen am Rhein",
-      "addressRegion": "Rheinland-Pfalz",
-      "addressCountry": "DE"
-    },
-    "openingHoursSpecification": [
-      { "@type": "OpeningHoursSpecification", "dayOfWeek": "Monday",    "opens": "17:00", "closes": "21:00" },
-      { "@type": "OpeningHoursSpecification", "dayOfWeek": "Wednesday", "opens": "17:00", "closes": "21:00" },
-      { "@type": "OpeningHoursSpecification", "dayOfWeek": "Friday",    "opens": "18:00", "closes": "21:00" },
-      { "@type": "OpeningHoursSpecification", "dayOfWeek": "Sunday",    "opens": "18:00", "closes": "21:00" }
-    ],
-    "sameAs": [
-      "https://www.instagram.com/circle_of_life_jiujitsu?igsh=MXVyMDNtdHRmNXoxZw=="
-    ]
-  }
-  </script>
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "SportsActivityLocation",
+      "name": "Circle of Life Jiu-Jitsu",
+      "sport": ["Brazilian Jiu-Jitsu", "Grappling", "Kampfsport", "BJJ", "Martial Arts"],
+      "url": "https://circleoflife-bjj.de/",
+      "telephone": "+49 176 61990534",
+      "email": "mail.circleoflife@gmx.de",
+      "image": [
+        "https://circleoflife-bjj.de/assets/social/og-cover.jpg",
+        "https://circleoflife-bjj.de/assets/images/Marvin_1.jpeg",
+        "https://circleoflife-bjj.de/assets/images/Schwarzer_GI.jpeg"
+      ],
+      "priceRange": "€€",
+      "address": {
+        "@type": "PostalAddress",
+        "streetAddress": "Am Herrschaftsweiher 17",
+        "postalCode": "67071",
+        "addressLocality": "Ludwigshafen am Rhein",
+        "addressRegion": "Rheinland-Pfalz",
+        "addressCountry": "DE"
+      },
+      "openingHoursSpecification": [
+        { "@type": "OpeningHoursSpecification", "dayOfWeek": "Monday",    "opens": "17:00", "closes": "21:00" },
+        { "@type": "OpeningHoursSpecification", "dayOfWeek": "Wednesday", "opens": "17:00", "closes": "21:00" },
+        { "@type": "OpeningHoursSpecification", "dayOfWeek": "Friday",    "opens": "18:00", "closes": "21:00" },
+        { "@type": "OpeningHoursSpecification", "dayOfWeek": "Sunday",    "opens": "18:00", "closes": "21:00" }
+      ],
+      "sameAs": [
+        "https://www.instagram.com/circle_of_life_jiujitsu?igsh=MXVyMDNtdHRmNXoxZw=="
+      ],
+      "areaServed": [
+        "Ludwigshafen am Rhein",
+        "Mannheim",
+        "Frankenthal",
+        "Bad Dürkheim",
+        "Grünstadt"
+      ]
+    }
+    </script>
+    
 
   <script type="application/ld+json">
     {
@@ -141,6 +152,8 @@
       <!-- Menü rechtsbündig -->
       <div id="nav" class="collapse navbar-collapse">
         <ul class="navbar-nav ms-auto mb-2 mb-lg-0 nav-compact align-items-lg-center">
+          <li class="nav-item"><a class="nav-link" href="/ueber-uns.html">Über uns</a></li>
+          <li class="nav-item"><a class="nav-link" href="/kursangebot.html">Kurse</a></li>
           <li class="nav-item"><a class="nav-link" href="#kursangebot">Kursangebot</a></li>
           <li class="nav-item"><a class="nav-link" href="#kursplan">Kursplan</a></li>
           <li class="nav-item"><a class="nav-link" href="#preise">Preise</a></li>
@@ -171,7 +184,7 @@
       </span>
     </div>
     <p class="hero-subline">
-      Starte mit 🥋 Brazilian Jiu-Jitsu in Ludwigshafen – anfängerfreundlich, strukturiert & unverbindlich.
+      Deine Adresse für 🥋 Brazilian Jiu-Jitsu, Grappling & Kampfsport in Ludwigshafen und Umgebung – anfängerfreundlich, strukturiert & unverbindlich.
       <a href="#kursplan" class="inline-cta">
         <br>Hier kannst du unseren <span class ="txt">Kursplan ansehen</span> <span class="icon">📅</span></a>
     </p>
@@ -240,9 +253,8 @@
       </article>
 
     </div>
-    <p class="footnote bg-warning text-dark px-3 py-2 rounded-3 mt-3">
-      👶 Alle Kurse sind selbstverständlich auch für <strong>Kinder</strong> verfügbar!
-      <br> Hier lernen Kinder spielerisch Kampfsport, Selbstvertrauen und Selbstverteidigung.
+    <p class="footnote bg-light border-start border-4 border-warning px-3 py-2 rounded-3 mt-3" data-aos="zoom-in" data-aos-delay="300">
+      👶 Alle Kurse sind auch für <strong>Kinder</strong> verfügbar – spielerisch lernen sie Kampfsport, Selbstvertrauen und Selbstverteidigung.
     </p>
   </div>
 </section>
@@ -254,7 +266,9 @@
     <header class="section-head" data-aos="fade-up">
       <h2 class="section-title">Be a part of the Circle</h2>
       <p class="section-subtitle" data-aos="fade-up">
-        Stärker werden – technisch, mental und als Team. Das ist unser Versprechen.
+        Stärker werden – technisch, mental und als Team. Das ist unser Versprechen.  
+        Viele unserer Mitglieder kommen aus <strong>Ludwigshafen</strong>, <strong>Mannheim</strong>, <strong>Bad Dürkheim</strong> oder <strong>Frankenthal</strong>.  
+        Egal woher du kommst – sicher dir dein <a href="#probetraining" class="text-decoration-none fw-bold">kostenloses Probetraining</a>.
       </p>
     </header>
 
@@ -540,7 +554,7 @@
     <header class="section-head" data-aos="fade-up">
       <h2 class="section-title">Kostenloses Probetraining</h2>
       <p class="section-subtitle" data-aos="fade-up" data-aos-delay="150">
-        Wir melden uns in der Regel innerhalb von 24h
+        Teste kostenlos, ob Brazilian Jiu-Jitsu oder Grappling als Kampfsport zu dir passt. Wir melden uns in der Regel innerhalb von 24h bei dir.
       </p>
     </header>
 
