--- a/index.html
+++ b/index.html
@@ -41,11 +41,17 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
 
   <!-- Favicon & CSS -->
-  <link rel="icon" type="image/svg+xml" href="/assets/images/JiuJitsuLogo.svg">
   <link href="/css/style.css" rel="stylesheet">
 
   <!-- AOS CSS for Stripe-like scroll animations -->
   <link rel="stylesheet" href="https://unpkg.com/aos@2.3.4/dist/aos.css"/>
+
+    <!-- Favicons -->
+  <link rel="icon" href="/assets/images/favicon-32.png" sizes="32x32" type="image/png">
+  <link rel="icon" href="/assets/images/favicon-192.png" sizes="192x192" type="image/png">
+  <link rel="apple-touch-icon" href="/assets/images/apple-touch-icon.png">
+  <link rel="icon" href="/assets/images/favicon.ico" sizes="any">
+
 
   <!-- Structured Data -->
   <script type="application/ld+json">
@@ -55,6 +61,7 @@
       "name": "Circle of Life Jiu-Jitsu",
       "sport": ["Brazilian Jiu-Jitsu", "Grappling", "Kampfsport", "BJJ", "Martial Arts"],
       "url": "https://circleoflife-bjj.de/",
+      "logo": "https://circleoflife-bjj.de/assets/images/logo-512.png",
       "telephone": "+49 176 61990534",
       "email": "mail.circleoflife@gmx.de",
       "image": [
