--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
   <!-- Bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css"> -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
 
   <!-- Favicon & CSS -->
   <link href="/css/style.css" rel="stylesheet">
@@ -220,7 +220,7 @@
 
 
   <!-- # HERO SECTION -->
-  <header class="hero-modern">
+  <section class="hero-modern">
     <div class="container hero-content">
       <div class="hero-title-row">
         <span class="hero-join">Join the</span>
@@ -249,7 +249,7 @@
       </div>
 
     </div>
-  </header>
+  </section>
 
   <!-- # KURSANGEBOT-->
   <section id="kursangebot" class="py-5 section-divider" style="position:relative;">
@@ -744,7 +744,7 @@
 
             <p class="small text-secondary mt-2 mb-0">
               <i class="bi bi-car-front-fill text-warning me-1"></i>
-              Parken: Hofeinfahrt &amp; Parkhaus um die Ecke.
+              Parken: ihr könnt gegenüber vom Eingang auf der Insel parken.
             </p>
           </div>
         </div>
